--- a/src/css/Canvas.css
+++ b/src/css/Canvas.css
@@ -66,6 +66,7 @@
 
 #color-change {
     margin-right: 10px;
+    cursor: pointer;
 }
 
 #clear-canvas {
