--- a/src/css/Music.css
+++ b/src/css/Music.css
@@ -8,9 +8,14 @@
 .music-entry {
     position: relative;
     margin-bottom: 3px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    transition: 0.3s;
 }
 .music-entry:hover {
     cursor: pointer;
+    transform: scale(105%);
 }
 .music-entry > img {
     transition: filter 0.2s;
@@ -19,7 +24,7 @@
     filter: blur(2px) brightness(0.4);
 }
 .music-label {
-    font-size: 15px;
+    font-size: min(2vw, 20px);
     color: white !important;
     text-align: center;
 
