--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -17,3 +17,15 @@
     height: 100%;
     border: 2px outset rgba(216, 216, 216, 0.315);
 }
+.project-video-container {
+    width: 100%;
+    position: relative;
+    padding-bottom: 100%;
+}
+#wish-animation {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    object-fit: cover;
+    position: absolute;
+}
